--- a/Builder/pom.xml
+++ b/Builder/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>DesignPattern</artifactId>
+        <groupId>com.pigsun.github</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.pigsun.github</groupId>
-    <artifactId>DesignPattern</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>FactoryMethod</module>
-        <module>AbstractFactory</module>
-        <module>Builder</module>
-    </modules>
+    <artifactId>Builder</artifactId>
 
 
 </project>
