Singleton 单例设计模式

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>FactoryMethod</module>
         <module>AbstractFactory</module>
         <module>Builder</module>
+        <module>Singleton</module>
     </modules>
 
 
