--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>AbstractFactory</module>
         <module>Builder</module>
         <module>Singleton</module>
+        <module>Adapters</module>
     </modules>
 
 
