--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Builder</module>
         <module>Singleton</module>
         <module>Adapters</module>
+        <module>Bridge</module>
     </modules>
 
 
